minor changes on main CSS
main css, added border left of editable fields

--- a/main.css
+++ b/main.css
@@ -611,6 +611,11 @@ p {
     background-color: #084d0bc0;
 }
 
+.editbl {
+    border-left: solid;
+    border-left-color: lightgrey;
+}
+
 
 /* MEDIA ------------------------------------------------------ */
 
