Value checks for fields about adding a new player

--- a/main.css
+++ b/main.css
@@ -612,8 +612,10 @@ p {
 }
 
 .editbl {
-    border-left: solid;
+    border-left: outset;
     border-left-color: lightgrey;
+    border-bottom: outset;
+    border-bottom-color: lightgrey;
 }
 
 
